--- a/Manual/settings.json
+++ b/Manual/settings.json
@@ -2,4 +2,7 @@
     "title": "hogehoge",
     "path": "dir1/dir2",
     "version": "1.001"
+    "actors_file" : "path/actors.json",
+    "director_file" : "path/director.json",
+    "scenes_file" : "path/scenes_file",
 }
